<resources>
    <!--    MAIN-->
    <string name="app_name">LightNovel</string>"
    <string name="home">Home</string>
    <string name="genres">Genres</string>
    <string name="search">Search</string>
    <string name="your_book">Your Books</string>
    <string name="menu">Menu</string>


    <!--    Menu-->
    <string name="welcome">Welcome to the Free Novel Club</string>
    <string name="sign_up_in">Sign In / Sign Up</string>
    <string name="sign_in"> Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="nick_name">Nickname</string>
    <string name="passwd">Password</string>
    <string name="community">Community</string>
    <string name="upgrade_vip">Upgrade VIP member</string>
    <string name="review_rating">Review &amp; Rating app</string>
    <string name="share_to_friend">Share to Friends</string>
    <string name="suggest_story">Suggest Story</string>
    <string name="bug_report">Bug report</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="policy">Policy</string>
    <string name="version">Version: 2.0.1</string>
    <string name="dont_have_an_account">Don\'t Have an Account?</string>
    <string name="forget_password">Forget password?</string>
    <string name="reset_password"> Reset password</string>
    <string name="login_success">Login Success</string>
    <string name="wrong_account">"Wrong account or password"</string>
    <string name="connection_errors">"Connection Errors"</string>

    <!--    Genres-->
    <string name="shounen">Shounen</string>
    <string name="harem">Harem</string>
    <string name="comedy">Comedy</string>
    <string name="martial_arts">Martial Arts</string>
    <string name="school_life">School Life</string>
    <string name="mystery">Mystery</string>
    <string name="shoujo">Shoujo</string>
    <string name="romance">Romance</string>
    <string name="sci_fi">Sci-fi</string>
    <string name="gender_bender">Gender Bender</string>
    <string name="mature">Mature</string>
    <string name="fantasy">Fantasy</string>
    <string name="horror">Horror</string>
    <string name="drama">Drama</string>
    <string name="tragedy">Tragedy</string>
    <string name="supernatural">Supernatural</string>
    <string name="ecchi">Ecchi</string>
    <string name="xuanhuan">Xuanhuan</string>
    <string name="adventure">Adventure</string>
    <string name="action">Action</string>
    <string name="psychological">Psychological</string>
    <string name="xianxia">Xianxia</string>
    <string name="wuxia">Wuxia</string>
    <string name="historical">Historical</string>
    <string name="slice_of_life">Slice of Life</string>
    <string name="seinen">Seinen</string>
    <string name="lolicon">Lolicon</string>
    <string name="adult">Adult</string>
    <string name="josei">Josei</string>
    <string name="sports">Sports</string>
    <string name="smut">Smut</string>
    <string name="mecha">Mecha</string>
    <string name="yaoi">Yaoi</string>
    <string name="shounen_ai">Shounen Ai</string>
    <string name="incorrect_account">Incorrect account or password</string>
    <string name="loading">Loading...</string>
    <string name="heart">heart</string>
    <string name="description">Description</string>
    <string name="chapter">Chapters</string>
    <string name="comments">Comments</string>

    <string name="content">With the idea of imparting programming
      knowledge, Mr. Sandeep Jain, an IIT Roorkee alumnus started a
      dream, GeeksforGeeks. Whether programming excites you or you feel
      stifled, wondering how to prepare for interview questions or how to
      ace data structures and algorithms, GeeksforGeeks is a one-stop solution.
      With every tick of time, we are adding arrows in our quiver. From articles
      on various computer science subjects to programming problems for practice,
      from basic to premium courses, from technologies to entrance examinations,
      we have been building ample content with superior quality. In a short span,
      we have built a community of 1 Million+ Geeks around the world, 20,000+
      Contributors and 500+ Campus Ambassadors in various colleges across the nation.
      Our success stories include a lot of students who benefitted in their placements
      and landed jobs at tech giants. Our vision is to build a gigantic network of
      geeks and we are only a fraction of it yet.
  </string>
    <string name="type_your_search_here">Type your search here</string>
    <string name="not_found_search">Not Found. Please try with a short word</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="see_more">See More</string>
    <string name="last_chapter">Latest Chapter</string>
    <string name="log_out">Sigh Out</string>
    <string name="rating">My Rating</string>
    <string name="reset_succes">Reset Password successful!, please check your email</string>
    <string name="reset_fail">Reset failed, please check your information again!.</string>
    <string name="your_cmt">Your comment</string>
    <string name="send">Send</string>
    <string name="check_your_info">Please check your information</string>
    <string name="is_rating">Rating Done!</string>
    <string name="require_login">Please login</string>
    <string name="text_offline">You are offline</string>

</resources>