<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"
        />
    <item
        android:id="@+id/action_genres"
        android:icon="@drawable/baseline_menu_book_24"
        android:title="@string/genres" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search" />
    <item
        android:id="@+id/action_your_book"
        android:icon="@drawable/baseline_bookmarks_24"
        android:title="@string/your_book" />
    <item
        android:id="@+id/action_menu"
        android:icon="@drawable/baseline_menu_24"
        android:title="@string/menu" />
</menu>